// hero/hero.proto
syntax = "proto3";

package user;

service UserService {
  rpc getUser (UserId) returns (UserResponse) {}  
  rpc createUser (CreateUserDto) returns (UserResponse) {}  
  rpc updateUser (CreateUserDto) returns (UserResponse) {}
  rpc searchUsers (SearchUserDto) returns (UserListDto) {}
}

message UserId {
  required string id = 1;
}

message QueryDto {
  required string name=1;
  required string value = 2;
  enum method {
    eq = 0; //equals
    gt = 1; //greater than
    lt = 2; //less than
    ne = 3; //not equals
    in = 4; //in
    sw = 5; //starts with
    ew = 6; //ends with
    ct = 7; //contains
    regex = 8; // reqgular expression
  }
}

message SearchUserDto {
  repeated QueryDto queries=1;
  optional bool or = 2;
  required int32 page = 3;
  required int32 limit = 4;
}

message UserListDto {
  repeated UserDto users = 1;
  required int32 total = 2;
}

message UserResponse {
  UserDto result = 1;
  ErrorResponse error = 2;
}

message ErrorResponse {
  string message=1;
  int32 errorCode=2;
}

message UserDto {
  string id = 1;
  string userName = 2;
  string password = 3;
  optional string orgId = 4;
  required ProfileDto profile=5;
  repeated AddressDto addresses=6;
}

message CreateUserDto {
  string userName = 1;
  string password = 2;
  optional string orgId = 3;
  required ProfileDto profile=4;
  repeated AddressDto addresses=5;
}

message AddressDto {
  required string street=1;
  required string ward=2;
  required string district=3;
  required string city=4;
  required string state=5;
  required string country=6;
}

message ProfileDto {
  required string firstName=1;
  required string lastName=2;
  optional string phone=3;
  optional string gender=4;
  optional string photo=5;
  optional int64 dateOfBirth=6;
}

message OperatorDto {
  required CreateUserDto user=1;
  repeated string orgsManagement=2;
}